Fix too big Bildergalerie Menu Point

--- a/style/general.less
+++ b/style/general.less
@@ -59,7 +59,7 @@ p {
 	padding: 1em;
 }
 
-@media (min-width: @sizes[mobile]) {
+@media (max-width: @sizes[desktop]) {
 	main {
 		padding-top: 12em;
 		max-width: 95vw;
